--- a/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Views/Home/Index.cshtml
+++ b/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Views/Home/Index.cshtml
@@ -12,5 +12,13 @@
     <li>@Html.ActionLink("RetrieveMarsCalendar", "RetrieveMarsCalendar")</li>
     <li>@Html.ActionLink("RetrieveMaterials", "RetrieveMaterials")</li>
     <li>@Html.ActionLink("RetrieveFactoryTransfers", "RetrieveFactoryTransfers")</li>
+    <li>@Html.ActionLink("AcknowledgeProcessOrder", "AcknowledgeProcessOrder")</li>
     <li>@Html.ActionLink("CreateGRProcessOrder", "CreateGRProcessOrder")</li>
+    <li>@Html.ActionLink("CancelGRProcessOrder", "CancelGRProcessOrder")</li>
+    <li>@Html.ActionLink("CreateConsumption", "CreateConsumption")</li>
+    <li>@Html.ActionLink("CreateStockAdjustment", "CreateStockAdjustment")</li>
+    <li>@Html.ActionLink("LoadStockBalance", "LoadStockBalance")</li>
+    <li>@Html.ActionLink("CreateBlend", "CreateBlend")</li>
+    <li>@Html.ActionLink("CreateScrapMaterial", "CreateScrapMaterial")</li>
+    <li>@Html.ActionLink("StartProcessOrder", "StartProcessOrder")</li>
 </ul>
